<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/BLUE"
                android:textSize="40dp"
                android:layout_gravity="center"
                android:text="@string/select_uv_sensor"/>

        <LinearLayout
                android:id="@+id/rest3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_scan"
                    android:id="@+id/startScanBtn"
                    android:layout_gravity="center_horizontal"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop_scan"
                    android:id="@+id/stopScanBtn"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="6"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/connect_btn_name"
                android:id="@+id/ConnectBleBtn"
                android:layout_gravity="center_horizontal"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>