<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/BLUE"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:text="@string/start_title"/>

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/logo_1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/continue_btn"
                android:id="@+id/continueBtn"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/BLACK"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/software_version_number"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>