<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.intern.ble_ex1.MainActivity">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/linearLayout4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/BLUE"
                    android:text="@string/ble_device_name"/>
            <TextView
                    android:id="@+id/ble_device_name_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/BLACK"
                    android:text="Sample"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/BLUE"
                    android:text="@string/ble_device_address"/>
            <TextView
                    android:id="@+id/ble_device_address_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/BLACK"
                    android:text="00:00:00:00"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="@string/ble_device_status"/>
            <TextView
                    android:id="@+id/ble_device_status"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="-------"/>
        </LinearLayout>

        <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:padding="10dp"
                app:seriesColor="#ee0000"
                app:seriesData="0=5;2=5;3=0;4=2"
                app:seriesType="line"/>

        <TextView
                android:id="@+id/data_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/BLACK"
                android:textSize="20sp"
                android:text="Value"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
